--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 						Designer: <a class="footer__developer-link" href="https://t.me/Mrshmallowww">Anastasia Ilina</a>
 					</li>
 					<li class="footer__developer">
-						Developer: <a class="footer__developer-link" href="#">Iliya Grinyak</a>
+						Developer: <a class="footer__developer-link" href="https://t.me/melion11">Iliya Grinyak</a>
 					</li>
 				</ul>
 
