add module js and scroll

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="css/radio.css">
 	<link rel="stylesheet" href="css/footer.css">
 
-	<script src="./js/script.js"></script>
+	<script src="./js/index.js" type="module"></script>
 </head>
 
 <body>
